Implementación de SQLite

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".batteryService"
+            android:description="Consumo de energia en aplicaciones de Video Streaming"/>
     </application>
 
 </manifest>
